unpackaged/main/default/objects/Informe_Siebel__c/Informe_Siebel__c.object-meta.xml
<CustomObject>
    <label>Informe_Siebel</label>
    <nameField>
        <label>Nombre de Informe_M_Comercial</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Informe_Siebel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>