unpackaged/main/default/objects/Informe_Siebel__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Informe_Siebel</relationshipLabel>
    <relationshipName>Informe_Siebel</relationshipName>
    <type>Lookup</type>
</CustomField>