unpackaged/main/default/objects/Informe_Siebel__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <length>10</length>
    <type>Text</type>
</CustomField>