unpackaged/main/default/objects/Informe_Siebel__c/fields/Mensaje__c.field-meta.xml
<CustomField>
    <fullName>Mensaje__c</fullName>
    <label>Mensaje</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>