unpackaged/main/default/objects/Informe_Siebel__c/fields/Nombre_cta__c.field-meta.xml
<CustomField>
    <fullName>Nombre_cta__c</fullName>
    <label>Nombre_cta</label>
    <length>60</length>
    <type>Text</type>
</CustomField>